--- a/mblog-web/src/main/resources/mtons.properties
+++ b/mblog-web/src/main/resources/mtons.properties
@@ -2,10 +2,10 @@
 system.version = 2.2.1
 
 # Windows必填
-gmagick.home=D:/Program Files/GraphicsMagick-1.3.20-Q8
+gmagick.home=C:/Program Files/GraphicsMagick-1.3.33-Q8
 
 # 存储目录
-store.root=d:/data/mblog
+store.root=c:/mblog/data
 
 # 存储模式, 可选值 absolute / relative
 store.repo=relative
@@ -30,3 +30,4 @@ store.file.ext = .jpg
 umeditor.fileSizeLimit=2
 
 velocity.resource = /WEB-INF/vm/email
+
